; ModuleID = '/home/carl/AnghaBench/jq/src/extr_bytecode.c_opcode_describe.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_bytecode.c_opcode_describe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.opcode_description = type { i32 }

@NUM_OPCODES = common dso_local global i32 0, align 4
@opcode_descriptions = common dso_local global %struct.opcode_description* null, align 8
@invalid_opcode_description = common dso_local global %struct.opcode_description zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.opcode_description* @opcode_describe(i64 %0) #0 {
  %2 = alloca %struct.opcode_description*, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = trunc i64 %4 to i32
  %6 = icmp sge i32 %5, 0
  br i1 %6, label %7, label %16

7:                                                ; preds = %1
  %8 = load i64, i64* %3, align 8
  %9 = trunc i64 %8 to i32
  %10 = load i32, i32* @NUM_OPCODES, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %16

12:                                               ; preds = %7
  %13 = load %struct.opcode_description*, %struct.opcode_description** @opcode_descriptions, align 8
  %14 = load i64, i64* %3, align 8
  %15 = getelementptr inbounds %struct.opcode_description, %struct.opcode_description* %13, i64 %14
  store %struct.opcode_description* %15, %struct.opcode_description** %2, align 8
  br label %17

16:                                               ; preds = %7, %1
  store %struct.opcode_description* @invalid_opcode_description, %struct.opcode_description** %2, align 8
  br label %17

17:                                               ; preds = %16, %12
  %18 = load %struct.opcode_description*, %struct.opcode_description** %2, align 8
  ret %struct.opcode_description* %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
